--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   "author": "Jiwon Jeong",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.5.0",
     "css-loader": "^7.1.2",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "globals": "^15.6.0",
     "html-webpack-plugin": "^5.6.0",
+    "prettier": "3.3.2",
     "style-loader": "^4.0.0",
     "webpack": "^5.92.0",
     "webpack-cli": "^5.1.4"
